--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test-debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "peerDependencies": {
     "react": "^17.0.1",
@@ -23,6 +24,7 @@
     "babel-loader": "^8.2.2",
     "bulma": "^0.9.2",
     "css-loader": "^5.2.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "node-sass": "^5.0.0",
     "path": "^0.12.7",
